--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,9 @@
+body{
+    font: Arial, Helvetica, sans-serif;
+}
 #container{
     width: 800px;
-    border: 1px solid grey;
+    /*border: 1px solid grey;*/
     height:100px;
     margin: 0 auto auto
 }
@@ -21,6 +24,9 @@ h1 a{
     height: 50px;
     float: right;
     background: linear-gradient(green,white);
+    background: -webkit-linear-gradient(green,white);
+    background: -o-linear-gradient(green,white);
+    background: -moz-linear-gradient(green,white);
     padding: 20px 10px 0 10px;
     margin-top: 20px;
     
@@ -42,6 +48,129 @@ h1 a{
     padding: 5px;
     font-size:15px;
     background: white url("images/searchIcon.png") right center no-repeat ;
+    border: 1px solid #C8D03e
+
+}
+
+#menu{
+    height: 70px;
+    background: linear-gradient(#F8F594, #D5D533);  
+    background: -webkit-linear-gradient(#F8F594, #D5D533);  
+    background: -moz-linear-gradient(#F8F594, #D5D533);  
+    background: -o-linear-gradient(#F8F594, #D5D533);  
+    padding:5px;
+}
+ul {
+    list-style: none;
+}
+#menu ul li:last-child{
+    border-right: none;
+}
+#menu ul li{
+    float: left;
+    padding:0 30px;
+    height: 30px;
+    border-right: 1px solid #5d12e7;   
+        
+}
+#menu ul li a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 13px;
+    color:#5d12e7;
+    line-height: 25px;
+    
+    transition: font-size .5s ease;
+    -webkit-transition: font-size .5s ease;
+    -moz-transition: font-size .5s ease;
+    -o-transition: font-size .5s ease;
+    -ms-transition: font-size .5s ease;
+}
+#menu ul li a:hover, #menu ul li a.active{
+    font-size: 20px;
+    font-weight: bold;
+    color: b314db;
+}
+
+
+#introduction {
+    background: linear-gradient(#e5f2bb, #b7e952);
+    background: -moz-linear-gradient(#e5f2bb, #b7e952);
+    background: -o-linear-gradient(#e5f2bb, #b7e952);
+    background: -ms-linear-gradient(#e5f2bb, #b7e952);
+    padding:30px;
+    margin: 16px 0;
+    
+}
+#introduction h3{
+    font-size: 40px;
+    color: #316901;
+    font-weight: normal;    
+}
+
+#introduction p {
+    font-size: 20px;
+    color: #316901;
+    font-weight: normal;
+}
+
+.sidebar {
+    height: 500px;
+    width:300px;
+    border: 1px solid #BAF46F;
+    border-radius: 20px;
+    padding: 10px 30px;
+    margin: 0 15p 0 15px
+}
+.sidebar h3{
+    color: #b314DB;
+    font-size: 30px;
+    
+}
+#leftsidebar ul{
+    padding-top:8px;
+}
+#leftsidebar ul li{
+    padding: 4px 0 4px 10px
+    list-style-image: url(images/arrow.png)
+}
+.sidebar ul li a{
+    text-decoration: none;
+    font-size:20px;
+    color: #5d12e7;
+    transition: font-size .5s ease; 
+    -webkit-transition: font-size .5s ease;
+    -moz-transition: font-size .5s ease;
+    -o-transition: font-size .5s ease;
+    -ms-transition: font-size .5s ease;
+    
+}
+.sidebar ul li a:hover, .sidebar ul li a.active{
+    text-decoration: none;
+    color:#b314db;
+    font-weight: bold;
     
 
+}
+#rightsidebar ul li{
+    background: url(images/tick.png) no-repeat;
+    padding: 20px 0px 20px 70px;
+
+}
+#leftsidebar{
+    float:left;
+}
+#rightsidebar{
+    float:right;
+    
+}
+
+.footer {
+    height: 60px;
+    background: linear-gradient(#6F390, #D5D533);
+    background: -webkit-linear-gradient(#6F390, #D5D533);
+    background: -o-linear-gradient(#6F390, #D5D533);
+    background: -ms-linear-gradient(#6F390, #D5D533);
+    padding: 10px 30px;
+    margin-top: 15px
 }
