--- a/styling.css
+++ b/styling.css
@@ -14,10 +14,17 @@ h1 a{
 }
 #header{
     height:100px;
-    padding: 10px 0 10px 0;
 }
 #brand{
+    margin-top: 20px;
     float:left;
+    font-size: 40px;
+    padding: 10px
+        
+}
+#brand a{
+    text-decoration: none;
+    
 }
 #searchBox{
     width: 400px;
@@ -61,14 +68,20 @@ h1 a{
     padding:5px;
 }
 ul {
-    list-style: none;
+    list-style: none
 }
 #menu ul li:last-child{
     border-right: none;
 }
+#menu ul{
+    display: flex;
+    justify-content: center
+}
 #menu ul li{
     float: left;
-    padding:0 30px;
+    padding:0 1px;
+    text-align: center;
+
     height: 30px;
     border-right: 1px solid #5d12e7;   
         
@@ -76,7 +89,7 @@ ul {
 #menu ul li a{
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: 14px;
     color:#5d12e7;
     line-height: 25px;
     
@@ -120,7 +133,7 @@ ul {
     border: 1px solid #BAF46F;
     border-radius: 20px;
     padding: 10px 30px;
-    margin: 0 15p 0 15px
+    overflow: hidden
 }
 .sidebar h3{
     color: #b314DB;
@@ -129,10 +142,15 @@ ul {
 }
 #leftsidebar ul{
     padding-top:8px;
+
 }
 #leftsidebar ul li{
-    padding: 4px 0 4px 10px
-    list-style-image: url(images/arrow.png)
+    padding: 4px 0 4px 10px;
+    /*For some reason, I need this null field for the image to display
+      I'm thinking this is because of the inhereted null list-style for the ul class'*/
+    list-style: ;
+    list-style-image: url(images/arrow.png);
+
 }
 .sidebar ul li a{
     text-decoration: none;
@@ -154,7 +172,7 @@ ul {
 }
 #rightsidebar ul li{
     background: url(images/tick.png) no-repeat;
-    padding: 20px 0px 20px 70px;
+    padding: 7px 0px 20px 70px;
 
 }
 #leftsidebar{
